frame/support/test/tests/pallet_ui/storage_multiple_getters.stderr
error: Invalid attribute: Duplicate attribute
  --> $DIR/storage_multiple_getters.rs:20:3
   |
20 |     #[pallet::getter(fn foo_error)]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
